* You can now set the default skin-tone for emojis #expressYourself. Android 7+.
* Various bug fixes.
* Updated localization: CA, NB, SC, TR.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestone/85