@@ -1,9 +1,11 @@
 package com.anysoftkeyboard;
 
 import android.annotation.TargetApi;
+import android.app.AlertDialog;
 import android.app.Service;
 import android.content.ClipData;
 import android.content.ClipboardManager;
+import android.content.Context;
 import android.os.Build;
 import android.view.KeyEvent;
 import android.widget.Toast;
@@ -17,6 +19,8 @@ import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.robolectric.RuntimeEnvironment;
+import org.robolectric.Shadows;
+import org.robolectric.shadows.ShadowAlertDialog;
 import org.robolectric.shadows.ShadowToast;
 
 @RunWith(AnySoftKeyboardRobolectricTestRunner.class)
@@ -220,6 +224,76 @@ public class AnySoftKeyboardClipboardTest extends AnySoftKeyboardBaseTest {
         //and if we try to copy again, we should not see the long-press tip
         mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_COPY);
         Assert.assertEquals(RuntimeEnvironment.application.getString(R.string.clipboard_copy_done_toast), ShadowToast.getTextOfLatestToast());
+    }
+
+    @Test
+    @TargetApi(Build.VERSION_CODES.HONEYCOMB)
+    public void testClipboardShowsOptionsToCopy() {
+        TestInputConnection inputConnection = (TestInputConnection) mAnySoftKeyboardUnderTest.getCurrentInputConnection();
+        final String expectedText = "testing something very long";
+        inputConnection.commitText(expectedText, 1);
+        inputConnection.setSelection("testing ".length(), "testing something very".length());
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_COPY);
+        inputConnection.setSelection(0, "testing ".length());
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_COPY);
+
+        //now, we'll do long-press
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_PASTE_POPUP);
+
+        final AlertDialog latestAlertDialog = ShadowAlertDialog.getLatestAlertDialog();
+        Assert.assertNotNull(latestAlertDialog);
+        final ShadowAlertDialog shadowAlertDialog = Shadows.shadowOf(latestAlertDialog);
+        Assert.assertEquals("Pick text to paste", shadowAlertDialog.getTitle());
+        Assert.assertEquals(2, latestAlertDialog.getListView().getAdapter().getCount());
+        Assert.assertEquals("testing ", latestAlertDialog.getListView().getAdapter().getItem(0).toString());
+        Assert.assertEquals("something very", latestAlertDialog.getListView().getAdapter().getItem(1).toString());
+    }
+
+    @Test
+    @TargetApi(Build.VERSION_CODES.HONEYCOMB)
+    public void testClipboardShowsOptionsWhenPrimaryClipChanged() {
+        ClipboardManager shadowManager = (ClipboardManager) RuntimeEnvironment.application.getSystemService(Context.CLIPBOARD_SERVICE);
+        shadowManager.setPrimaryClip(new ClipData("text 1", new String[0], new ClipData.Item("text 1")));
+        shadowManager.setPrimaryClip(new ClipData("text 2", new String[0], new ClipData.Item("text 2")));
+
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_PASTE_POPUP);
+
+        AlertDialog latestAlertDialog = ShadowAlertDialog.getLatestAlertDialog();
+        Assert.assertNotNull(latestAlertDialog);
+        Assert.assertEquals(2, latestAlertDialog.getListView().getAdapter().getCount());
+        Assert.assertEquals("text 2", latestAlertDialog.getListView().getAdapter().getItem(0).toString());
+        Assert.assertEquals("text 1", latestAlertDialog.getListView().getAdapter().getItem(1).toString());
+
+        latestAlertDialog.cancel();
+
+        mAnySoftKeyboardUnderTest.simulateTextTyping("text 3");
+        mAnySoftKeyboardUnderTest.getCurrentInputConnection().setSelection(1, 4);
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_COPY);
+
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_PASTE_POPUP);
+
+        latestAlertDialog = ShadowAlertDialog.getLatestAlertDialog();
+        Assert.assertNotNull(latestAlertDialog);
+        Assert.assertEquals(3, latestAlertDialog.getListView().getAdapter().getCount());
+        Assert.assertEquals("ext", latestAlertDialog.getListView().getAdapter().getItem(0).toString());
+        Assert.assertEquals("text 2", latestAlertDialog.getListView().getAdapter().getItem(1).toString());
+        Assert.assertEquals("text 1", latestAlertDialog.getListView().getAdapter().getItem(2).toString());
+
+        latestAlertDialog.cancel();
+
+        for (int clipIndex = 0; clipIndex < 100; clipIndex++) {
+            shadowManager.setPrimaryClip(new ClipData("text " + clipIndex, new String[0], new ClipData.Item("text " + clipIndex)));
+        }
+
+        mAnySoftKeyboardUnderTest.simulateKeyPress(KeyCodes.CLIPBOARD_PASTE_POPUP);
+
+        latestAlertDialog = ShadowAlertDialog.getLatestAlertDialog();
+        Assert.assertNotNull(latestAlertDialog);
+        Assert.assertEquals(16, latestAlertDialog.getListView().getAdapter().getCount());
+        Assert.assertEquals("text 99", latestAlertDialog.getListView().getAdapter().getItem(0).toString());
+        Assert.assertEquals("text 98", latestAlertDialog.getListView().getAdapter().getItem(1).toString());
+        Assert.assertEquals("text 97", latestAlertDialog.getListView().getAdapter().getItem(2).toString());
+        Assert.assertEquals("text 96", latestAlertDialog.getListView().getAdapter().getItem(3).toString());
     }
 
     @Test
